--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div id="main">
         <div id="page">
             <div id="loop">
-                <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
-                <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
-                <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
+                <h1><b>CYBER</b>HXCKER IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
+                <h1><b>CYBER</b>HXCKER IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
+                <h1><b>CYBER</b>HXCKER IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
             </div>
             <h3>CYBERFICTION AIMS TO BE A DECENTRALIZED COMMUNITY THAT CAN <br> CREATE NEW VALUES AND PROFITS THROUGH PLAY IN THE VIRTUAL <br> WORLD.</h3>
             <h4>...SCROLL TO READ</h4>
@@ -26,7 +26,7 @@
         </div>
         <div id="page1">
             <div id="right-text">
-                <h3>CYBERFICTION / KEY WORD</h3>
+                <h3>HACKER /  WORD</h3>
                 <h1>HAVE FUN
                     <br>
                     LET'S PLAY
