--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="nav">
-        <h3><b>CYBER</b>FICTION*</h3>
+        <h3><b>CYBER</b>HXCKER*</h3>
         <button>APRIL,2023</button>
     </div>
     <div id="main">
@@ -20,7 +20,7 @@
                 <h1><b>CYBER</b>HXCKER IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
                 <h1><b>CYBER</b>HXCKER IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
             </div>
-            <h3>CYBERFICTION AIMS TO BE A DECENTRALIZED COMMUNITY THAT CAN <br> CREATE NEW VALUES AND PROFITS THROUGH PLAY IN THE VIRTUAL <br> WORLD.</h3>
+            <h3>CYBER <br> WORLD <br>NEWGEN.</h3>
             <h4>...SCROLL TO READ</h4>
             <canvas></canvas>
         </div>
@@ -44,7 +44,7 @@
         </div>
         <div id="page2">
             <div id="text1">
-                <h3>CYBERFICTION / HAVE FUN</h3>
+                <h3>CYBER /WORLD</h3>
                 <h1>LET'S
                     <br>
                     HAVE FUN
@@ -52,12 +52,12 @@
                     TOGETHER</h1>
             </div>
             <div id="text2">
-                <p>LET'S HAVE A BLAST! LET'S JUST THROW AWAY AGE, GENDER, REGION, <br> STATUS, ETC., DON'T COMPETE, DON'T FIGHT, COOPERATE AND SHARE <br> WITH EACH OTHER AND ENJOY IT TOGETHER! SO THAT YOU CAN STAND <br> THERE IN THE NOT-TOO-DISTANT FUTURE AND DREAM OF ANOTHER NEW <br> FUTURE</p>
+                <p>CREATING  <br> NEW <br> ERA <br> OF CYBER  <br> FUTURE</p>
             </div>
         </div>
         <div id="page3">
             <div id="text3">
-                <h3>CYBERFICTION / PLAYGROUND</h3>
+                <h3>CYBER /HXCKER</h3>
                 <h1>
 
 CYBERFIELD
